--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "ng run build"
   },
   "eslintConfig": {
     "extends": "react-app"
